force-app/main/default/objects/cdcpc__RD_Pressure_Class_Connections__c/fields/cdcpc__HIC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HIC__c</fullName>
    <label>HIC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>