force-app/main/default/objects/cdcpc__RD_Pressure_Class_Connections__c/fields/cdcpc__HOC_OrderDesc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HOC_OrderDesc__c</fullName>
    <label>HOC OrderDesc</label>
    <length>60</length>
    <type>Text</type>
</CustomField>