force-app/main/default/objects/cdcpc__RD_Pressure_Class_Connections__c/fields/cdcpc__PTC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PTC__c</fullName>
    <label>PTC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>