force-app/main/default/objects/cdcpc__RD_Pressure_Class_Connections__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__CDC_Ext_ID__c</columns>
    <columns>cdcpc__Flag__c</columns>
    <columns>cdcpc__HCLASS__c</columns>
    <columns>cdcpc__HIC__c</columns>
    <columns>cdcpc__HIC_OrderDesc__c</columns>
    <columns>cdcpc__HOC__c</columns>
    <columns>cdcpc__HOC_OrderDesc__c</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__Table_Type__c</columns>
    <columns>cdcpc__MNFA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>